--- a/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git.csproj
+++ b/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Img\expansion-hubble.jpg" />
     <Content Include="Content\site.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
